tests/snapshots/integration_tests__pre_push_ancestry_failure.snap
---
source: tests/integration_tests.rs
expression: content
---
EXIT_CODE: 1

STDOUT:
(empty)

STDERR:
[gherrit] Branch lonely-branch is MANAGED. Syncing stack...
[gherrit] [ERROR] Failed to collect commits: The branch 'lonely-branch' is not based on 'main'.
[gherrit] [ERROR] GHerrit only supports stacked branches that share history with the default branch.
[gherrit] [ERROR] Maybe you want to 'git rebase' on 'main' before pushing?
