tests/snapshots/integration_tests__public_stack_links_private_state.snap
---
source: tests/integration_tests.rs
expression: ctx.formatted_mock_pr_state()
---
[
  {
    "id": 1,
    "number": 1,
    "html_url": "http://github.com/repos/owner/repo/pulls/1",
    "url": "http://api.github.com/repos/owner/repo/pulls/1",
    "node_id": "PR_1",
    "state": "OPEN",
    "user": {
      "login": "test-user",
      "id": 123,
      "node_id": "MDQ6VXNlcjE=",
      "avatar_url": "https://example.com/avatar",
      "gravatar_id": "",
      "url": "https://api.github.com/users/test-user",
      "html_url": "https://github.com/test-user",
      "followers_url": "https://api.github.com/users/test-user/followers",
      "following_url": "https://api.github.com/users/test-user/following{/other_user}",
      "gists_url": "https://api.github.com/users/test-user/gists{/gist_id}",
      "starred_url": "https://api.github.com/users/test-user/starred{/owner}{/repo}",
      "subscriptions_url": "https://api.github.com/users/test-user/subscriptions",
      "organizations_url": "https://api.github.com/users/test-user/orgs",
      "repos_url": "https://api.github.com/users/test-user/repos",
      "events_url": "https://api.github.com/users/test-user/events{/privacy}",
      "received_events_url": "https://api.github.com/users/test-user/received_events",
      "type": "User",
      "site_admin": false
    },
    "title": "Public Commit",
    "body": "<!-- WARNING: This PR description is automatically generated by GHerrit. Any manual edits will be overwritten on the next push. -->\n\n\n\n\n---\n\n- 👉 #1\n\n<details>\n<summary><strong>⬇️ Download this PR</strong></summary>\n\n######\n\n**Branch**\n```bash\ngit fetch origin refs/heads/[GHERRIT_ID_1] && git checkout -b pr-[GHERRIT_ID_1] FETCH_HEAD\n```\n\n**Checkout**\n```bash\ngit fetch origin refs/heads/[GHERRIT_ID_1] && git checkout FETCH_HEAD\n```\n\n**Cherry Pick**\n```bash\ngit fetch origin refs/heads/[GHERRIT_ID_1] && git cherry-pick FETCH_HEAD\n```\n\n**Pull**\n```bash\ngit pull origin refs/heads/[GHERRIT_ID_1]\n```\n\n</details>\n\n*Stacked PRs enabled by [GHerrit](https://github.com/joshlf/gherrit).*\n\n<!-- WARNING: GHerrit relies on the following metadata to work properly. DO NOT EDIT OR REMOVE. --><!-- gherrit-meta: {\"id\": \"[GHERRIT_ID_1]\", \"parent\": null, \"child\": null}\" -->",
    "head": {
      "ref": "[GHERRIT_ID_1]",
      "sha": ""
    },
    "base": {
      "ref": "main",
      "sha": ""
    },
    "created_at": "2023-01-01T00:00:00Z",
    "updated_at": "2023-01-01T00:00:00Z"
  }
]
